; ModuleID = '/home/carl/AnghaBench/git/extr_refs.c_copy_reflog_msg.c'
source_filename = "/home/carl/AnghaBench/git/extr_refs.c_copy_reflog_msg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @copy_reflog_msg(%struct.strbuf* %0, i8* %1) #0 {
  %3 = alloca %struct.strbuf*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8, align 1
  %6 = alloca i32, align 4
  store %struct.strbuf* %0, %struct.strbuf** %3, align 8
  store i8* %1, i8** %4, align 8
  store i32 1, i32* %6, align 4
  %7 = load %struct.strbuf*, %struct.strbuf** %3, align 8
  %8 = call i32 @strbuf_addch(%struct.strbuf* %7, i8 signext 9)
  br label %9

9:                                                ; preds = %28, %21, %2
  %10 = load i8*, i8** %4, align 8
  %11 = getelementptr inbounds i8, i8* %10, i32 1
  store i8* %11, i8** %4, align 8
  %12 = load i8, i8* %10, align 1
  store i8 %12, i8* %5, align 1
  %13 = icmp ne i8 %12, 0
  br i1 %13, label %14, label %32

14:                                               ; preds = %9
  %15 = load i32, i32* %6, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %22

17:                                               ; preds = %14
  %18 = load i8, i8* %5, align 1
  %19 = call i32 @isspace(i8 signext %18)
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %21, label %22

21:                                               ; preds = %17
  br label %9

22:                                               ; preds = %17, %14
  %23 = load i8, i8* %5, align 1
  %24 = call i32 @isspace(i8 signext %23)
  store i32 %24, i32* %6, align 4
  %25 = load i32, i32* %6, align 4
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %27, label %28

27:                                               ; preds = %22
  store i8 32, i8* %5, align 1
  br label %28

28:                                               ; preds = %27, %22
  %29 = load %struct.strbuf*, %struct.strbuf** %3, align 8
  %30 = load i8, i8* %5, align 1
  %31 = call i32 @strbuf_addch(%struct.strbuf* %29, i8 signext %30)
  br label %9

32:                                               ; preds = %9
  %33 = load %struct.strbuf*, %struct.strbuf** %3, align 8
  %34 = call i32 @strbuf_rtrim(%struct.strbuf* %33)
  ret void
}

declare dso_local i32 @strbuf_addch(%struct.strbuf*, i8 signext) #1

declare dso_local i32 @isspace(i8 signext) #1

declare dso_local i32 @strbuf_rtrim(%struct.strbuf*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
